# Copyright 2014 GSI, Inc. All rights reserved.
#
#
project( dds-tutorials )

# DDS Tutorial1
message(STATUS "Build Tutorial1 - YES")
add_subdirectory( dds-tutorial1 )

# DDS Tutorial2
message(STATUS "Build Tutorial2 - YES")
add_subdirectory( dds-tutorial2 )

# DDS Tutorial3
message(STATUS "Build Tutorial3 - YES")
add_subdirectory( dds-tutorial3 )
